--- a/凿壁偷光.html
+++ b/凿壁偷光.html
@@ -55,7 +55,7 @@
         </ul>
 
         <!-- 占位符图片，请替换为你的实际图片文件 -->
-        <img src="zaobi-touguang.jpg" alt="凿壁偷光的画面">
+        <img src="凿壁偷光.png" alt="凿壁偷光的画面">
     </div>
 
 </body>
